--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-username=sa
-password=
+username=postgres
+password=PassworD1
 driver=org.hsqldb.jdbcDriver
 url=jdbc:hsqldb:file:db-dir/articles;sql.syntax_pgs=true
